<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Factories\HasFactory;

class Exploitation extends Model
{
    use HasFactory;

    const CREATED_AT = 'created_at';
    const UPDATED_AT = null;

    protected $fillable = [
        'micro_projet_id',
        'etat_installation',
        'etat_activite',
        'realisation_vide',
        'nbre_visites',
        'date_debut_visite',
        'date_fin_visite',
        'difficultes',
        'recommandations',
        'latitude',
        'longitude',
        'observations',
        'agent_id',
    ];

    protected $casts = [
        'date_debut_visite' => 'date',
        'date_fin_visite' => 'date',
        'latitude' => 'decimal:8',
        'longitude' => 'decimal:8',
        'nbre_visites' => 'integer',
    ];

    public function microProjet()
    {
        return $this->belongsTo(MicroProjet::class, 'micro_projet_id');
    }

    public function agent()
    {
        return $this->belongsTo(Personnel::class, 'agent_id');
    }

    public function visitePhotos()
    {
        return $this->hasMany(VisitePhoto::class, 'exploitation_id');
    }
}
